# automatic-ar

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  detect_markers.cpp  find_solution.cpp  overlay.cpp  track.cpp
eigen3/unsupported/: unsupported
libs/: CMakeLists.txt  cam_config.cpp  dataset.cpp  dataset.h  image_array_detector.cpp  initializer.cpp  initializer.h  multicam_mapper.cpp  multicam_mapper.h  sparselevmarq.h
